Fixed output overflow

--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ main {
 
 #output {
     margin: 0 auto;
-    height: 100px;
+    /* height: 100px;
+    width: 80%; */
+}
+
+#output-div {
+    height: 125px;
     width: 80%;
 }
